--- a/mysqldump.cnf
+++ b/mysqldump.cnf
@@ -5,4 +5,4 @@ max_allowed_packet      = 16M
 host=${MYSQL_HOST_NAME}
 database=${MYSQL_DB_NAME}
 user=${MYSQL_USER_NAME}
-password={MYSQL_PASSWORD}
+password=${MYSQL_PASSWORD}
