--- a/rsnapshot.conf
+++ b/rsnapshot.conf
@@ -229,8 +229,8 @@ lockfile	/home/debian/rsnapshot.pid
 ###############################
 
 # LOCALHOST
-backup_exec	mysqldump --single-transaction -A | bzip2 > /home/debian/backup/${MYSQL_DB_NAME}_`date +'%d_%m_%Y'`.sql.bz2
 backup	/home/debian/sshfs${SSH_DIR}/./	${BACKUP_NAME}/
+backup_exec	mysqldump --single-transaction -A | bzip2 > /home/debian/backup/daily.0/${MYSQL_DB_NAME}_`date +'%d_%m_%Y'`.sql.bz2
 #backup	/home/		localhost/
 #backup	/etc/		localhost/
 #backup	/usr/local/	localhost/
