--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -12,6 +12,7 @@ services:
     privileged: true
     environment:
         TZ: 'Europe/Copenhagen'
+        CRON_TZ: 'Europe/Copenhagen'
         BACKUP_NAME: 'backup_name'
         ADMIN_EMAIL: 'email@example'
         SSH_HOST_NAME: 'ssh-host'
